ticket:210 fixed scrollbar for results table

--- a/cghub/static/css/base.less
+++ b/cghub/static/css/base.less
@@ -65,11 +65,11 @@
 }
 
 .flexigrid {
-	width: 100%;
+    width: 100%;
     // fix selected row highlighting
     div.bDiv {
-//        overflow-x: scroll !important;    don't show scrolls in flexigrid
-//        overflow-y: hidden !important;
+        overflow-x: hidden !important;    // don't show scrolls in flexigrid
+        overflow-y: hidden !important;
         tr.trSelected td {
             background-color: #d5effc;
         }
